crates/templates/tests/snapshots/usage_test__render-10.snap
---
source: crates/templates/tests/usage_test.rs
expression: output
---
usage() {
  printf "Test simple usage\n\n"
  printf "Usage:\n"
  printf "  usage [OPTIONS]\n"
  printf "  usage --help | -h\n"
  printf "  usage --version | -v\n\n"
  printf "Options:\n"
  printf "  -a --all\n"
  printf "    Test option with all attributes\n"
  printf "    [@required, @multiple, @default foo, @choices foo, bar, baz]\n"
}

